[gd_scene format=3 uid="uid://settingsmenu"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_settings"]
[ext_resource type="Texture2D" uid="uid://cfmpacohs3gw6" path="res://assets/main_menu.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://c2e7duja1spvc" path="res://assets/fonts/AmaticSC-Bold.ttf" id="3_font"]

[sub_resource type="FontVariation" id="FontVariation_bold"]
base_font = ExtResource("3_font")
variation_embolden = 0.8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 100
text = "PENGATURAN"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
text = "VOLUME SUARA"
horizontal_alignment = 1

[node name="VolumeHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/VBoxContainer/VolumeHBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="ResetButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.2, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn")
text = "HAPUS REKOR TERITINGGI"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.5, 0.5, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn")
text = "KEMBALI"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/VolumeHBox/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResetButton" to="." method="_on_reset_score_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
